--- a/css/styles.css
+++ b/css/styles.css
@@ -11,47 +11,45 @@
 
 /* Reset */
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  /* Para que el scrolleo en la one page sea suave */
-  scroll-behavior: smooth;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /* Para que el scrolleo en la one page sea suave */
+    scroll-behavior: smooth;
+      
+
 }
 
 /* Para quitar los puntos a los items de listas */
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 /* Para que los enlaces hereden el color de texto y no tengan subrayado */
 a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 /* Este max-width es para que el contenido no se "estire" demasiado hacia los costados y
 *  el margin: auto; para tenerlo centrado fácilmente ;)
 */
 main {
-  max-width: 1200px;
-  margin: auto;
+    width: 1024px;
+    max-width: 80%;
+    margin: auto;
 }
 
-h1 {
-  font-size: 36px;
-  color: #0f0f0f;
-}
-p {
-  font-size: 18px;
-  line-height: 1.2;
-}
-h2 {
-  font-size: 28px;
-  color: #0f0f0f;
-}
-button {
-  font-size: 20px;
-}
+h1{ font-size: 36px;
+    color:#0f0f0f}
+p{ font-size: 18px;
+    line-height: 1.2;}
+h2{ font-size: 28px;
+    color:#0f0f0f}
+button{ font-size: 20px;}
+
+
+
 
 /* Recomendaciones! 
 *  - Comenzar desde lo más general y luego ir hacia lo mas específico, asignando primero
@@ -72,145 +70,164 @@ button {
 */
 
 .info {
-  text-align: center;
+    text-align: center;
+
 }
+
 
 /*-----*/
 .container {
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-  height: 90px;
-  width: 100%;
-  background-color: #fbfbfb;
+    position: fixed;
+    display: flex;
+    justify-content:space-around;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    height: 90px;
+    width: 100%;
+    background-color: #fbfbfb;
 }
 
-.container img {
-  padding: 0%;
-  margin: 0%;
-  height: 90px;
-  width: 120px;
-  border-radius: 0%;
-  display: flex;
-  justify-content: flex-start;
+.container img{
+    padding: 0%;
+    margin: 0%;
+    height: 90px;
+    width: 120px;
+    border-radius: 0%;
+    display: flex;
+    justify-content: flex-start; 
 }
 
 img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    max-width: 80%;
+
 }
 
 nav {
-  display: flex;
-  justify-content: flex-end;
-  padding-bottom: 0px;
-  padding-top: 0px;
-  background-color: #fbfbfb;
-  height: 90px;
+    display: flex;
+    justify-content: flex-end;
+    padding-bottom: 0px;
+    padding-top: 0px;  
+    background-color:#fbfbfb;
+    height: 90px;
 }
 
-.container a {
-  display: flex;
-  padding: 40px 40px;
-  font-weight: bold;
-  color: black;
-  font-size: 1em;
-  height: 90px;
+.container a{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 40px;
+    padding-right: 10px;
+    padding-right: 10px;
+    text-align: center;
+    justify-items: left;
+    font-weight: bold;
+    color: black;
+    font-size: 1em;
+    height: 90px;
+
 }
 
-.logo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.logo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #inicio {
-  min-height: 100vh;
+    min-height: 100vh;
+    max-width: 80%;
 }
 
 #inicio img {
-  width: 350px;
-  height: 350px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    width: 350px;
+    height: 300px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .info {
-  text-align: center;
-  padding-top: 20px;
-  margin: 20px;
+    text-align: center;
+    padding-top: 20px;
+    margin: 20px;
 }
 
-.info p {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: #0f0f0f;
-  justify-content: center;
-  align-items: center;
+
+ .info p{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color:#0f0f0f;
+    justify-content: center;
+    align-items: center;
 }
 button {
-  border-radius: 25px;
-  padding: 10px;
-  background-color: #af599e;
-  color: #fbfbfb;
-  border-style: none;
-  cursor: pointer;
+    border-radius: 25px;
+    padding: 10px;
+    background-color: #af599e;
+    color: #fbfbfb;
+    border-style: none;
 }
 
 #contacto {
-  display: flex;
-  flex-direction: column;
-  margin-top: 30px;
-  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    min-height: 100vh;
+    max-width: 80%;
 }
 
 .hablemos {
-  background-color: rgba(175, 89, 158, 0.3);
-  border-radius: 10px;
-  color: #0f0f0f;
-  text-align: center;
-  padding: 20px 20px;
-  margin-top: 120px;
+    background-color: rgba(175, 89, 158, 0.3) ;
+    border-radius: 10px;
+    color:#0f0f0f;
+    text-align: center;
+    padding: 20px 20px;
+    margin-top: 120px ;
+
 }
 
 .hablemos p {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: #0f0f0f;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color:#0f0f0f;
 }
 
-.redes {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 60px;
+
+.redes{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ padding: 60px;
+ max-width: 80%;
+
 }
 
 .redes a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80px;
-  height: 80px;
-  margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 80px;
+    height: 80px;
+    margin: 20px;
 }
 .redes img {
-  width: 80px;
-  height: 80px;
-  margin: 20px;
+    width: 60px;
+    height: 60px;
+    margin: 20px;
+
 }
-footer {
-  height: 90px;
-  background-color: #af599e;
-  color: #fbfbfb;
-  font: size 12px;
-  padding-top: 40px;
-  align-items: center;
-  text-align: center;
-  width: 100%;
+footer{
+    height: 90px;
+    background-color:#af599e;
+    color:#fbfbfb;
+    font: size 12px;
+    padding-top: 40px;
+    align-items: center;
+    text-align: center;
+    width: 100%;
 }
